# fred-samples

./: .gitignore  README.md
agents/: Makefile  pyproject.toml
agents/config/: DEBUG.txt  configuration.yaml  models_catalog.yaml
agents/fred_samples_agents/: general_assistant.py  registry.py
agents/fred_samples_agents/bank_transfer/: graph_agent.py
agents/fred_samples_agents/postal_tracking/: graph_agent.py
agents/fred_samples_agents/team_of_3_agents_sample/: README_AGENT.md  README_CLI.md  __init__.py
agents/fred_samples_agents/team_of_3_agents_sample/graph_agent/: __init__.py  graph_agent.py  graph_state.py  graph_steps.py
agents/fred_samples_agents/team_of_3_agents_sample/react_agent_one/: __init__.py  react_agent.py
agents/fred_samples_agents/team_of_3_agents_sample/react_agent_two/: __init__.py  react_agent.py
agents/fred_samples_agents/team_of_3_agents_sample/team/: __init__.py  team_agent.py
