[project]
name = "fred-samples-agents"
version = "0.1.0"
description = "Fred sample agent pod — bank transfer and postal tracking with HITL"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "fred-sdk>=0.1.9",
  "fred-runtime>=0.1.17",
  "greenlet>=3.4.0",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_samples_agents*"]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.12.5",
]

[tool.uv.sources]
fred-sdk = { path = "../../fred/libs/fred-sdk", editable = true }
fred-runtime = { path = "../../fred/libs/fred-runtime", editable = true }
